--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: flex-start;
   width: 800px;
-  margin: 0 auto;
+  margin: 0px auto;
 }
 
 .profile {
@@ -11,12 +11,18 @@
   flex-direction: column;
   align-items: center;
   width: 300px;
-  margin: 0 auto;
+  margin: 50px auto;
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px 0 0 0;
   border: 2px solid black;
+  transition: transform 0.5s ease;
+}
+
+.profile:hover,
+.profile:focus {
+  transform: scale(1.1);
 }
 
 .description {
