--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -17,12 +17,13 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 20px 0 0 0;
   border: 2px solid black;
-  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, box-shadow 200ms;
 }
 
 .profile:hover,
 .profile:focus {
   transform: scale(1.1);
+  box-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
 }
 
 .description {
